# Ear_Decomposition

./: CMakeLists.txt  DynamicMemory.cpp  Original_Ear_Decomposition.cpp  README  run.sh
Codes/: Converter.cpp  Generator.cpp  Modified_Ear_Decomposition_V1.cpp  Modified_Ear_Decomposition_V2.cpp  Original_Ear_Decomposition.c  Original_Ear_Decomposition.cpp  Verification_Code.py  graph_csr_cc.cpp  info.cpp  queue.h
data/: inp_converter.py
